--- a/src/components/AboutSection/style.scss
+++ b/src/components/AboutSection/style.scss
@@ -1,31 +1,45 @@
 .abt_containeter {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    gap: 5rem;
-    margin: 4rem 0;
-    div:nth-child(1) {
-        width: 55%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5rem;
+  margin: 2rem 0;
 
-        img {
-            width: 100%;
-        }
+  @media (max-width: 950px) {
+    flex-direction: column-reverse;
+    gap: 4rem;
+  }
+
+  div:nth-child(1) {
+    width: 35%;
+
+    @media (max-width: 950px) {
+      width: 100%;
     }
 
-    div:nth-child(2) {
-        width: 45%;
-
-        h2 {
-            font-size: 35px;
-            margin-bottom: 2rem;
-        }
-
-        p {
-            color: #696969;
-            font-size: 14px;
-            margin-bottom: 1rem;
-            font-weight: 500;
-            line-height: 1.7;
-        }
+    img {
+      width: 100%;
     }
+  }
+
+  div:nth-child(2) {
+    width: 55%;
+
+    @media (max-width: 950px) {
+      width: 100%;
+    }
+
+    h3 {
+      font-size: 35px;
+      margin-bottom: 2rem;
+    }
+
+    p {
+      color: #696969;
+      font-size: 14px;
+      margin-bottom: 2rem;
+      font-weight: 500;
+      line-height: 1.7;
+    }
+  }
 }
