--- a/src/components/ChooseSection/style.scss
+++ b/src/components/ChooseSection/style.scss
@@ -2,36 +2,48 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: row-reverse;
   gap: 5rem;
+
+  @media (max-width: 990px) {
+    flex-direction: column-reverse;
+  }
 
   .img-cont {
     width: 40%;
 
-    img {
+    @media (max-width: 990px) {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+    }
+
+    ul {
+      background: #052639;
+      padding: 4rem;
+      list-style: circle;
+
+      li {
+        color: #fff;
+        font-size: 14px;
+        line-height: 1.7;
+        margin-bottom: 0.8rem;
+        font-weight: 400;
+      }
     }
   }
 
   .text-cont {
     width: 45%;
+    @media (max-width: 990px) {
+      width: 100%;
+    }
     h3 {
-        font-size: 25px;
+      font-size: 30px;
+      margin-bottom: 1rem;
     }
 
-    ul {
-        margin-top: 2rem;
-        list-style: disc;
-    
-        li {
-            margin-bottom: 1rem;
-
-            h6 {
-                font-size: 17px;
-                margin-bottom: 10px;
-            }
-        }
+    h4 {
+      font-size: 18px;
+      margin-bottom: 2rem;
     }
   }
 }
