--- a/src/components/HeroSection/style.scss
+++ b/src/components/HeroSection/style.scss
@@ -6,46 +6,43 @@
     justify-content: space-between;
     align-items: center;
     width: 95%;
-    margin: 2rem 0;
+    margin: 2rem auto;
 
     .hero-left {
       width: 45%;
-      .top-cont {
-        display: flex;
-        gap: 5px;
-        align-items: center;
-
-        div {
-          background: #052639;
-          width: 100px;
-          height: 3px;
-          border-radius: 20px;
-        }
-
-        p {
-          color: #052639;
-          font-size: 16px;
-          text-transform: uppercase;
-          font-weight: 500;
-        }
-      }
 
       .text-cont {
         margin-top: 20px;
-        margin-left: 3rem;
+        // margin-left: 3rem;
 
         h2 {
           color: #052639;
           font-weight: 500;
-          font-size: 30px;
+          font-size: 40px;
         }
 
         p {
           color: #696969;
           font-size: 14px;
-          margin-top: 10px;
+          margin-top: 1.5rem;
           font-weight: 500;
           line-height: 1.7;
+        }
+
+        .btn-cont {
+          margin-top: 1.5rem;
+          display: flex;
+          align-items: center;
+          gap: 20px;
+
+          button:nth-child(2) {
+            background: transparent;
+            outline: 0;
+            border: 0;
+            color: #c00000;
+            font-weight: 500;
+            cursor: pointer;
+          }
         }
       }
     }
@@ -62,18 +59,54 @@
         height: 100%;
       }
     }
+
+    @media (max-width: 990px) {
+      flex-direction: column;
+      gap: 5rem;
+
+      .hero-left,
+      .hero-right {
+        width: 100%;
+      }
+
+      .hero-left {
+        text-align: center;
+
+        .text-cont {
+          h2 {
+            font-size: 45px;
+          }
+        }
+
+        .btn-cont {
+          justify-content: center;
+        }
+      }
+    }
+
+    @media (max-width: 570px) {
+      .hero-left {
+        .text-cont {
+          h2 {
+            font-size: 35px;
+          }
+        }
+      }
+      
+    }
   }
 
   .hero-bottom {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    margin: 3rem 0;
-    gap: 1.5rem;
+    margin: 6rem 0;
+    // gap: 4rem;
     width: 100%;
 
     img {
-      width: 80px;
+      width: 70%;
+      margin-right: 3rem;
     }
   }
 }
