--- a/src/components/SystemsSection/style.scss
+++ b/src/components/SystemsSection/style.scss
@@ -1,54 +1,52 @@
 .system_container {
-  margin: 4rem 0;
-  background: #f1f5f6;
-  padding: 3rem 0;
+  margin: 4rem 0 0 0;
+  background: #c00000;
+  padding: 4rem 0;
 
   .container {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
   }
 
-  .val_cont {
-    display: flex;
-    align-items: center;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    gap: 5rem;
-
-    div:nth-child(1) {
-      width: 45%;
-      h2 {
-        font-size: 35px;
-        margin-bottom: 1rem;
-      }
-
-      div {
-        margin-bottom: 1.5rem;
-        h3 {
-          font-size: 18px;
-          margin-bottom: 1rem;
-        }
-        ul {
-          list-style: circle;
-          padding: 0;
-          margin-left: 1rem;
-
-          li {
-            margin-bottom: 15px;
-            font-size: 14px;
-            line-height: 1.7;
-          }
-        }
-      }
+  .val_head {
+    h2 {
+      color: #fff;
+      font-size: 20px;
+      margin-bottom: 1rem;
     }
 
-    .img-cont {
-      width: 45%;
+    p {
+      color: #fff;
+    }
+  }
+
+  .val_cont {
+    display: flex;
+    align-items: flex-start;
+    margin-top: 3rem;
+    // flex-direction: row-reverse;
+    // justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 5rem;
+
+    div {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      width: 370px;
+
       img {
-        width: 100%;
-        height: 25rem;
-        object-fit: cover;
-        border-radius: 8px;
+        width: 20px;
+      }
+
+      h5 {
+        font-size: 15px;
+        color: #fff;
+      }
+
+      p {
+        font-size: 13px;
+        color: #fff;
       }
     }
   }
