--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,5 +1,5 @@
 .header_cont.active {
-  background-color: #ffe1e1;
+  background-color: #fff;
   backdrop-filter: blur(25px) saturate(180%);
   position: fixed;
   top: 0;
@@ -7,6 +7,10 @@
   right: 0;
   width: 100%;
   z-index: 999;
+}
+
+.header_cont {
+  position: relative;
 }
 
 .header-container {
@@ -17,12 +21,39 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  // position: relative;
 
   a {
     text-decoration: none;
     img {
       width: 200px;
     }
+  }
+
+  @media (max-width: 545px) {
+    .header-right {
+      position: absolute;
+      gap: 5rem !important;
+      justify-content: center !important;
+      background: #ea1616ea;
+      width: 100%;
+      height: 100vh;
+      top: 1000px;
+      left: 0;
+      right: 0;
+      padding: 20px;
+      flex-direction: column;
+      transition: all .5s ease;
+
+      a {
+        color: #fff !important;
+      }
+    }
+
+    .header-right.active {
+      top: 5rem;
+    }
+    
   }
 
   .header-right {
