--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,18 @@ html {
   font-family: "Inter", sans-serif;
 }
 
-body {
+.general_container {
   background: #fafafa;
+  width: 90%;
+  margin: 0 auto;
+  position: relative;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  /* display: none; */
+  /* z-index: 999; */
+}
+
+body {
   padding: 0;
   margin: 0;
 }
@@ -28,8 +38,8 @@ body {
 .container {
   max-width: 1400px;
   width: 95%;
-  margin: 4rem auto;
-  padding: 0;
+  margin: auto;
+  padding: 4rem 0;
 }
 
 h1,
@@ -60,4 +70,47 @@ p {
 img {
   max-width: 100%;
   height: auto;
+}
+
+@keyframes float1 {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(-10px, 0);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+.triangle-float1 {
+  animation: float1 5s infinite;
+}
+@keyframes float2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(-5px, -5px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+.triangle-float2 {
+  animation: float2 4s infinite;
+}
+@keyframes float3 {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(0, -10px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+.triangle-float3 {
+  animation: float3 6s infinite;
 }
