--- a/src/components/HeroSection/style.scss
+++ b/src/components/HeroSection/style.scss
@@ -1,5 +1,7 @@
 .hero-section {
   margin-top: 3rem;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 
   .hero-container {
     display: flex;
@@ -16,13 +18,13 @@
         // margin-left: 3rem;
 
         h2 {
-          color: #c00000;
+          // color: #c00000;
           font-weight: 500;
           font-size: 50px;
         }
 
         p {
-          color: #696969;
+          // color: #696969;
           font-size: 14px;
           margin-top: 1.5rem;
           font-weight: 500;
@@ -144,7 +146,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 6rem 0;
+    // margin: 6rem 0;
     // gap: 4rem;
     width: 100%;
 
